[package]
name = "serial-bridge"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
argh = "0.1.12"
camino = "1.1.6"
# oxide = "0.2.0"
oxide = { git = "http://umbreon.eq:3000/artemis-public/oxide.rs.git", branch = "artemis/client-creation-improvements" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.10", features = ["codec", "full"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
reqwest = { version = "0.11.22" }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"

# tokio-serial doesn't build on illumos
[target.'cfg(target_os = "linux")'.dependencies]
tokio-serial = { version = "5.4.4", features = ["codec", "libudev", "tokio-util", "rt"] }

# don't build guest-side unless we are building for linux (as controlled by)
# the conditional feature flag on tokio-serial
[[bin]]
name = "serial-bridge-guest"
required-features = ["tokio-serial/codec"]
